--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'application'
-
+apply plugin: 'jacoco'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -30,10 +30,27 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile 'com.googlecode.jmockit:jmockit:1.4'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+}
+
+jacoco {
+    toolVersion = "0.7.+"
+    // reportsDir = file("$buildDir/reports/jacoco")
 }
 
 test {
     systemProperties 'property': 'value'
+}
+
+task jacoco(type: JacocoReport, dependsOn: 'test') {
+    sourceSets sourceSets.main
+    executionData = files(tasks.jacocoTestReport.executionData)
+    reports {
+        html.enabled = true
+        xml.enabled = true
+        csv.enabled = true
+    }
 }
 
 uploadArchives {
